--- a/css/style1.css
+++ b/css/style1.css
@@ -1,44 +1,48 @@
-.body{
-  background-attachment: fixed;
-  background-color: rgb(236, 234, 231);
+body{
+  margin: 0;
+  padding: 0;
+  background-color: rgb(151, 175, 179);
+  
 }
 header{
   font: outline;
   font-size: 20px;
   font-weight: bold;
 }
-.nav-link{
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-};
-.nav-link a {
-  padding: 8px 8px 8px 32px;
+
+ a:hover {
+  color: #d10505;
+}
+
+.left{
+  
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 160px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+}
+.left a{
+  padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 25px;
   color: #818181;
   display: block;
-  transition: 0.3s;
-  ;
-}
-.nav-link a:hover {
-  color: #f1f1f1;
-}
-.nav-link .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
 }
 .main {
-  transition: margin-left .5s;
-  padding: 20px;
+  margin-left: 160px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+@media  (max-height: 800px) {
+
+  
+}
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 }
